--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "axios": "^0.21.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
